<resources>
    <string name="app_name">Registro</string>
    <string name="action_new_person">Nueva Persona</string>
    <string name="action_about">Acerca de</string>
    <string name="title_activity_about">Acerca de</string>
    <string name="title_activity_register">Persona</string>
    <string name="action_synchronize">Sincroniza</string>
    <string name="action_activate">Activar</string>
    <string name="action_inicio">Inicio</string>
    <string name="action_edit">Modificar</string>
    <string name="action_delete">Eliminar</string>

    <string name="action_tab">Tab</string>


    <string name="message_name">Nombre</string>
    <string name="message_last_name_f">Apellido Paterno</string>
    <string name="message_last_name_m">Apellido Materno</string>
    <string name="message_site">Sito Web</string>
    <string name="message_address">Dirección</string>

    <string name="btn_msg_save">Guardar</string>

    <string name="action_back">Atras</string>
    <string name="title_activity_tab">Tab</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="app_tab">Tab</string>
    <string name="section_tab01">Log</string>
    <string name="section_tab02">Favorites</string>
    <string name="section_tab03">Contacts</string>
    <string name="section_tab04">Message</string>
</resources>
